--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ matrix:
             - llvm-toolchain-precise-3.8
           packages:
             - clang-3.8
+            - libc++-dev
             - cmake
             - doxygen
             - graphviz
