--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ if(NOT CPPBENCHMARK_MODULE)
   foreach(EXAMPLE_FILE ${EXAMPLE_FILES})
     string(REGEX REPLACE "(.*)\\.cpp" "\\1" EXAMPLE_NAME ${EXAMPLE_FILE})
     set(EXAMPLE_TARGET "cppbenchmark-example-${EXAMPLE_NAME}")
-    set_source_files_properties(examples/${EXAMPLE_FILE} PROPERTIES COMPILE_FLAGS "${BENCHMARK_COMPILE_FLAGS}")
+    set_source_files_properties(examples/${EXAMPLE_FILE} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
     add_executable(${EXAMPLE_TARGET} examples/${EXAMPLE_FILE})
     target_include_directories(${EXAMPLE_TARGET} PUBLIC "include")
     target_link_libraries(${EXAMPLE_TARGET} cppbenchmark ${SYSTEM})
