--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+[submodule "build"]
+	path = build
+	url = https://github.com/chronoxor/CppBuildScripts.git
+	branch = master
 [submodule "cmake"]
 	path = cmake
 	url = https://github.com/chronoxor/CppCMakeScripts.git
