--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,11 +25,12 @@ init:
 install:
   - set INCLUDE=C:\Program Files (x86)\Windows Kits\10\Include\10.0.14393.0\um;%INCLUDE%
   - set LIB=C:\Program Files (x86)\Windows Kits\10\Lib\10.0.14393.0\um\x64;%LIB%
+  - git submodule update --init --recursive --remote
 
 # Build scripts
 build_script:
   - cd build
-  - ./vs.bat
+  - call vs.bat
 
 # Test scripts
 test: off
