--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,11 +17,11 @@ only_commits:
 environment:
   matrix:
     - type: Cygwin
-      changedir: C:\cygwin64\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/build; exec 0</dev/null;"
       build: C:\cygwin64\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/build; exec 0</dev/null; ./cygwin.sh"
-#    - type: VisualStudio
-#      changedir: cd build
-#      build: call vs.bat
+      command: C:\cygwin64\bin\bash -lc
+    - type: VisualStudio
+      build: call vs.bat
+      command: cmd /C
 
 # Allow to fail on first error in matrix
 matrix:
@@ -29,9 +29,9 @@ matrix:
 
 # Scripts that are called at very beginning, before repo cloning
 init:
-  - git config --global user.name "AppVeyor"
-  - git config --global user.email "team@appveyor.com"
-  - git config --global push.default simple
+  - '%command% "git config --global user.name "AppVeyor""'
+  - '%command% "git config --global user.email "team@appveyor.com""'
+  - '%command% "git config --global push.default simple"'
   - choco install doxygen.portable
   - choco install graphviz.portable
 
@@ -42,15 +42,9 @@ install:
   - if "%type%"=="VisualStudio" set LIB=C:\Program Files (x86)\Windows Kits\10\Lib\10.0.14393.0\um\x64;%LIB%
   - git submodule update --init --recursive --remote
 
-# Cache Cygwin files to speed up build
-cache:
-  - 'C:\cygwin64\var\cache\setup'
-
 # Build scripts
 build_script:
-  - 'echo %changedir%'
-  - 'echo %build%'
-  - '%changedir%'
+  - cd build
   - '%build%'
 
 # Test scripts
