--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,9 @@ matrix:
             - graphviz
             - libbfd-dev
             - uuid-dev
-#    - os: osx
-#      compiler: clang
+    - os: osx
+      compiler: clang
+      osx_image: xcode8
 
 # Using Trusty environment
 sudo: required
