--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ include(SetPlatformFeatures)
 find_package(Threads REQUIRED)
 
 # System link libraries
-list(APPEND SYSTEM Threads::Threads)
+list(APPEND SYSLIBS Threads::Threads)
 
 # Modules
 add_subdirectory("modules")
@@ -46,10 +46,11 @@ endif()
 file(GLOB_RECURSE SOURCE_FILES "source/*.cpp")
 set_source_files_properties(${SOURCE_FILES} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
 add_library(cppbenchmark ${SOURCE_FILES})
-target_include_directories(cppbenchmark PUBLIC "include")
+target_include_directories(cppbenchmark PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_link_libraries(cppbenchmark cpp-optparse HdrHistogram)
 set_target_properties(cppbenchmark PROPERTIES FOLDER libraries)
 list(APPEND INSTALL_TARGETS cppbenchmark)
+list(APPEND SYSLIBS cppbenchmark)
 
 # Additional module components: examples, performance benchmarks, tests, tools and install
 if(NOT CPPBENCHMARK_MODULE)
@@ -61,8 +62,8 @@ if(NOT CPPBENCHMARK_MODULE)
     set(EXAMPLE_TARGET "cppbenchmark-example-${EXAMPLE_NAME}")
     set_source_files_properties(examples/${EXAMPLE_FILE} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
     add_executable(${EXAMPLE_TARGET} examples/${EXAMPLE_FILE})
-    target_include_directories(${EXAMPLE_TARGET} PUBLIC "include")
-    target_link_libraries(${EXAMPLE_TARGET} cppbenchmark ${SYSTEM})
+    target_include_directories(${EXAMPLE_TARGET} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
+    target_link_libraries(${EXAMPLE_TARGET} cppbenchmark ${SYSLIBS})
     set_target_properties(${EXAMPLE_TARGET} PROPERTIES FOLDER examples)
     list(APPEND INSTALL_TARGETS ${EXAMPLE_TARGET})
     list(APPEND INSTALL_TARGETS_PDB ${EXAMPLE_TARGET})
@@ -72,8 +73,8 @@ if(NOT CPPBENCHMARK_MODULE)
   file(GLOB TESTS_SOURCE_FILES "tests/*.cpp")
   set_source_files_properties(${TESTS_SOURCE_FILES} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
   add_executable(cppbenchmark-tests ${CATCH} ${TESTS_SOURCE_FILES})
-  target_include_directories(cppbenchmark-tests PUBLIC "include" PRIVATE "modules/catch/single_include")
-  target_link_libraries(cppbenchmark-tests cppbenchmark ${SYSTEM})
+  target_include_directories(cppbenchmark-tests PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/modules/catch/single_include")
+  target_link_libraries(cppbenchmark-tests cppbenchmark ${SYSLIBS})
   set_target_properties(cppbenchmark-tests PROPERTIES FOLDER tests)
   list(APPEND INSTALL_TARGETS cppbenchmark-tests)
   list(APPEND INSTALL_TARGETS_PDB cppbenchmark-tests)
@@ -95,4 +96,10 @@ if(NOT CPPBENCHMARK_MODULE)
     endforeach()
   endif()
 
+endif()
+
+# Update parent scope of system link libraries
+get_directory_property(parent PARENT_DIRECTORY)
+if(parent)
+  set(SYSLINK "${SYSLIBS}" PARENT_SCOPE)
 endif()
