--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,6 @@ if(NOT CPPBENCHMARK_MODULE)
     set(EXAMPLE_TARGET "cppbenchmark-example-${EXAMPLE_NAME}")
     set_source_files_properties(examples/${EXAMPLE_FILE} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
     add_executable(${EXAMPLE_TARGET} examples/${EXAMPLE_FILE})
-    target_include_directories(${EXAMPLE_TARGET} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
     target_link_libraries(${EXAMPLE_TARGET} ${LINKLIBS})
     set_target_properties(${EXAMPLE_TARGET} PROPERTIES FOLDER examples)
     list(APPEND INSTALL_TARGETS ${EXAMPLE_TARGET})
@@ -73,7 +72,7 @@ if(NOT CPPBENCHMARK_MODULE)
   file(GLOB TESTS_SOURCE_FILES "tests/*.cpp")
   set_source_files_properties(${TESTS_SOURCE_FILES} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
   add_executable(cppbenchmark-tests ${CATCH} ${TESTS_SOURCE_FILES})
-  target_include_directories(cppbenchmark-tests PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/modules/catch/single_include")
+  target_include_directories(cppbenchmark-tests PRIVATE "modules/catch/single_include")
   target_link_libraries(cppbenchmark-tests ${LINKLIBS})
   set_target_properties(cppbenchmark-tests PROPERTIES FOLDER tests)
   list(APPEND INSTALL_TARGETS cppbenchmark-tests)
