--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -38,15 +38,21 @@ matrix:
 
 # Scripts that run after cloning repository
 install:
+  # doxygen
   - choco install doxygen.portable
+  # graphviz
   - choco install graphviz.portable
+  # cygwin
   - ps: 'Start-FileDownload "http://cygwin.com/setup-x86_64.exe" -FileName "C:\cygwin64\setup-x86_64.exe"'
   - if "%type%"=="Cygwin" C:\cygwin64\setup-x86_64.exe --quiet-mode --no-shortcuts --upgrade-also --root "C:\cygwin64" --local-package-dir "C:\cache\cygwin" --packages cmake,automake,make,gcc-core,gcc-g++,doxygen,graphviz
+  # mingw
   - if "%type%"=="MinGW" choco install --force mingw
   - if "%type%"=="MinGW" set PATH=C:\tools\mingw64\bin;%PATH:C:\Program Files\Git\usr\bin;=%
   - if "%type%"=="MinGW" set INCLUDE=C:\tools\mingw64\x86_64-w64-mingw32\include;%INCLUDE%
+  # Visual Studio
   - if "%type%"=="VisualStudio" set INCLUDE=C:\Program Files (x86)\Windows Kits\10\Include\10.0.14393.0\um;%INCLUDE%
   - if "%type%"=="VisualStudio" set LIB=C:\Program Files (x86)\Windows Kits\10\Lib\10.0.14393.0\um\x64;%LIB%
+  # git
   - '%command% "cmake --version"'
   - '%command% "git config --global user.name "AppVeyor""'
   - '%command% "git config --global user.email "team@appveyor.com""'
