Migrate to Visual Studio 2017

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,9 @@
 # Specify version format
 version: "1.0.0.{build}"
 
+# Image
+image: Visual Studio 2017
+
 # Branches to build
 branches:
   only: 
