--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -41,9 +41,7 @@ matrix:
 # Scripts that run after cloning repository
 install:
   # doxygen
-  - choco install doxygen.portable
-  # graphviz
-  - choco install graphviz.portable
+  - choco install doxygen.portable ghostscript graphviz miktex 
   # cygwin
   - if "%type%"=="Cygwin" if not exist "C:\cygwin64" mkdir "C:\cygwin64"
   - if "%type%"=="Cygwin" appveyor DownloadFile "http://cygwin.com/setup-x86_64.exe" -FileName "C:\cygwin64\setup-x86_64.exe"
@@ -54,8 +52,10 @@ install:
   - if "%type%"=="MinGW" set PATH=C:\mingw64\bin;%PATH:C:\Program Files\Git\usr\bin;=%
   - if "%type%"=="MinGW" set INCLUDE=C:\mingw64\x86_64-w64-mingw32\include;%INCLUDE%
   # Visual Studio
+  - if "%type%"=="VisualStudio" set PATH=C:\Program Files\MiKTeX 2.9\miktex\bin\x64;C:\Program Files\gs\gs9.21\bin;%PATH%
   - if "%type%"=="VisualStudio" set INCLUDE=C:\Program Files (x86)\Windows Kits\10\Include\10.0.15063.0\um;%INCLUDE%
   - if "%type%"=="VisualStudio" set LIB=C:\Program Files (x86)\Windows Kits\10\Lib\10.0.15063.0\um\x64;%LIB%
+  - if "%type%"=="VisualStudio" copy "C:\Program Files\gs\gs9.21\bin\gswin64c.exe" "C:\Program Files\gs\gs9.21\bin\gswin32c.exe"
   # git
   - '%command% "cmake --version"'
   - '%command% "git config --global user.name "AppVeyor""'
