--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -44,10 +44,10 @@ matrix:
 # Scripts that run after cloning repository
 install:
   # Doxygen
-  - choco install --force doxygen.portable
-  - choco install --force ghostscript
-  - choco install --force graphviz
-  - choco install --force miktex
+  - choco install --cache "C:\ProgramData\chocolatey\cache" --force doxygen.portable
+  - choco install --cache "C:\ProgramData\chocolatey\cache" --force ghostscript
+  - choco install --cache "C:\ProgramData\chocolatey\cache" --force graphviz
+  - choco install --cache "C:\ProgramData\chocolatey\cache" --force miktex
   # Cygwin
   - if "%type%"=="Cygwin" if not exist "C:\cygwin64" mkdir "C:\cygwin64"
   - if "%type%"=="Cygwin" appveyor DownloadFile "http://cygwin.com/setup-x86_64.exe" -FileName "C:\cygwin64\setup-x86_64.exe"
