--- a/.travis.yml
+++ b/.travis.yml
@@ -79,6 +79,8 @@ before_install:
   - if [ "$OS" != "osx" ] && [ "$COMPILER" = "clang" ]; then make cxx -j2; fi
   - if [ "$OS" != "osx" ] && [ "$COMPILER" = "clang" ]; then sudo make install-cxxabi install-cxx; fi
   - if [ "$OS" != "osx" ] && [ "$COMPILER" = "clang" ]; then popd; fi
+  # brew
+  - if [ "$OS" == "osx" ]; then brew update; fi
   # doxygen
   - if [ "$OS" == "osx" ]; then brew install doxygen; fi
   # graphviz
