--- a/.travis.yml
+++ b/.travis.yml
@@ -79,11 +79,9 @@ before_install:
   - if [ "$OS" != "osx" ] && [ "$COMPILER" = "clang" ]; then make cxx -j2; fi
   - if [ "$OS" != "osx" ] && [ "$COMPILER" = "clang" ]; then sudo make install-cxxabi install-cxx; fi
   - if [ "$OS" != "osx" ] && [ "$COMPILER" = "clang" ]; then popd; fi
-  # brew
+  # brew, doxygen, graphviz
   - if [ "$OS" == "osx" ]; then brew update; fi
-  # doxygen
   - if [ "$OS" == "osx" ]; then brew install doxygen; fi
-  # graphviz
   - if [ "$OS" == "osx" ]; then brew install graphviz; fi
 
 # Build scripts
