Test system directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,11 +29,16 @@ include(SetPlatformFeatures)
 find_package(Threads REQUIRED)
 
 # Modules
-include_directories(SYSTEM "${CMAKE_CURRENT_SOURCE_DIR}/modules")
 add_subdirectory("modules")
 
 # Link libraries
 list(APPEND LINKLIBS Threads::Threads)
+
+# System directories
+include_directories(SYSTEM "${CMAKE_CURRENT_SOURCE_DIR}/examples/cameron")
+include_directories(SYSTEM "${CMAKE_CURRENT_SOURCE_DIR}/examples/folly")
+include_directories(SYSTEM "${CMAKE_CURRENT_SOURCE_DIR}/examples/lockfree")
+include_directories(SYSTEM "${CMAKE_CURRENT_SOURCE_DIR}/modules")
 
 # Library
 file(GLOB_RECURSE SOURCE_FILES "source/*.cpp")
