--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,8 +63,8 @@ if(NOT CPPBENCHMARK_MODULE)
   # Tests
   file(GLOB TESTS_SOURCE_FILES "tests/*.cpp")
   set_source_files_properties(${TESTS_SOURCE_FILES} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
-  add_executable(cppbenchmark-tests ${CATCH} ${TESTS_SOURCE_FILES})
-  target_include_directories(cppbenchmark-tests PRIVATE "modules/catch/single_include")
+  add_executable(cppbenchmark-tests ${CATCH2} ${TESTS_SOURCE_FILES})
+  target_include_directories(cppbenchmark-tests PRIVATE "modules/Catch2/single_include")
   target_link_libraries(cppbenchmark-tests ${LINKLIBS})
   set_target_properties(cppbenchmark-tests PROPERTIES FOLDER tests)
   list(APPEND INSTALL_TARGETS cppbenchmark-tests)
