--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,4 +1,4 @@
-include("catch.cmake")
+include("Catch2.cmake")
 include("cpp-optparse.cmake")
 include("HdrHistogram.cmake")
 include("zlib.cmake")
