--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ matrix:
             - llvm-toolchain-trusty-5.0
           packages:
             - clang-5.0
+            - libc++-dev
+            - libc++abi-dev
             - cmake
             - doxygen
             - graphviz
