--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ include_directories(SYSTEM "${CMAKE_CURRENT_SOURCE_DIR}/modules")
 file(GLOB_RECURSE SOURCE_FILES "source/*.cpp")
 set_source_files_properties(${SOURCE_FILES} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
 add_library(cppbenchmark ${SOURCE_FILES})
-target_include_directories(cppbenchmark PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
+target_include_directories(cppbenchmark PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/modules/cpp-optparse" PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/modules/HdrHistogram/src")
 target_link_libraries(cppbenchmark ${LINKLIBS} cpp-optparse HdrHistogram)
 set_target_properties(cppbenchmark PROPERTIES FOLDER libraries)
 list(APPEND INSTALL_TARGETS cppbenchmark)
@@ -66,7 +66,8 @@ if(NOT CPPBENCHMARK_MODULE)
   # Tests
   file(GLOB TESTS_SOURCE_FILES "tests/*.cpp")
   set_source_files_properties(${TESTS_SOURCE_FILES} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
-  add_executable(cppbenchmark-tests ${CATCH2} ${TESTS_SOURCE_FILES})
+  add_executable(cppbenchmark-tests ${Catch2} ${TESTS_SOURCE_FILES})
+  target_include_directories(cppbenchmark-tests PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/modules/Catch2/single_include")
   target_link_libraries(cppbenchmark-tests ${LINKLIBS})
   set_target_properties(cppbenchmark-tests PROPERTIES FOLDER tests)
   list(APPEND INSTALL_TARGETS cppbenchmark-tests)
