--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -41,7 +41,7 @@ matrix:
 # Scripts that run after cloning repository
 install:
   # Chocolatey
-#  - choco upgrade chocolatey
+  - choco upgrade chocolatey
   # Doxygen
   - choco install --cache "C:\ProgramData\chocolatey\cache" --force doxygen.portable
   - choco install --cache "C:\ProgramData\chocolatey\cache" --force ghostscript
