--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,7 @@ matrix:
             - llvm-toolchain-trusty-6.0
           packages:
             - clang-6.0
-            - libc++-dev
-            - libc++abi-dev
-            - gcc-7
-            - g++-7
+            - libstdc++-6-dev
             - cmake
             - doxygen
             - graphviz
