--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -38,7 +38,7 @@ matrix:
 # Scripts that run after cloning repository
 install:
   # Chocolatey
-  - choco upgrade chocolatey
+#  - choco upgrade chocolatey
   # Doxygen
 #  - choco install --cache "C:\ProgramData\chocolatey\cache" --force doxygen.portable
 #  - choco install --cache "C:\ProgramData\chocolatey\cache" --force ghostscript
@@ -46,11 +46,10 @@ install:
 #  - choco install --cache "C:\ProgramData\chocolatey\cache" --force miktex
   # Cygwin
   - if "%type%"=="Cygwin" if not exist "C:\cygwin64" mkdir "C:\cygwin64"
-  - if "%type%"=="Cygwin" appveyor-retry appveyor DownloadFile "http://cygwin.com/setup-x86_64.exe" -FileName "C:\cygwin64\setup-x86_64.exe"
+#  - if "%type%"=="Cygwin" appveyor-retry appveyor DownloadFile "http://cygwin.com/setup-x86_64.exe" -FileName "C:\cygwin64\setup-x86_64.exe"
 #  - if "%type%"=="Cygwin" C:\cygwin64\setup-x86_64.exe --quiet-mode --no-shortcuts --upgrade-also --root "C:\cygwin64" --local-package-dir "C:\cache\cygwin" --packages cmake,automake,make,gcc-core,gcc-g++,doxygen,graphviz,libncurses-devel
-  - if "%type%"=="Cygwin" C:\cygwin64\setup-x86_64.exe --quiet-mode --no-shortcuts --upgrade-also --root "C:\cygwin64" --local-package-dir "C:\cache\cygwin" --packages cmake,automake,make,gcc-core,gcc-g++,libncurses-devel
-  - if "%type%"=="Cygwin" appveyor-retry appveyor DownloadFile "https://cmake.org/files/v3.12/cmake-3.12.0.tar.gz" -FileName "$APPVEYOR_BUILD_FOLDER"
-  - if "%type%"=="Cygwin" cd "$APPVEYOR_BUILD_FOLDER"
+  - if "%type%"=="Cygwin" appveyor-retry appveyor DownloadFile "https://cmake.org/files/v3.12/cmake-3.12.0.tar.gz" -FileName "%APPVEYOR_BUILD_FOLDER%"
+  - if "%type%"=="Cygwin" cd "%APPVEYOR_BUILD_FOLDER%"
   - if "%type%"=="Cygwin" tar xzf cmake-3.12.0.tar.gz --strip-components=1
   - if "%type%"=="Cygwin" '%command% "cd $APPVEYOR_BUILD_FOLDER/cmake-3.12.0; ./bootstrap && make && make install"'
   # MinGW
