--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -50,7 +50,7 @@ install:
 #  - if "%type%"=="Cygwin" C:\cygwin64\setup-x86_64.exe --quiet-mode --no-shortcuts --upgrade-also --root "C:\cygwin64" --local-package-dir "C:\cache\cygwin" --packages cmake,automake,make,gcc-core,gcc-g++,doxygen,graphviz,libncurses-devel
   - if "%type%"=="Cygwin" appveyor-retry appveyor DownloadFile "https://cmake.org/files/v3.12/cmake-3.12.0.tar.gz" -FileName "C:\cygwin64\home\appveyor\cmake.tar.gz"
   - if "%type%"=="Cygwin" cd "C:\cygwin64\home\appveyor"
-  - if "%type%"=="Cygwin" tar xzf cmake-3.12.0.tar.gz --strip-components=1 --directory "C:\cygwin64\home\appveyor\cmake"
+  - if "%type%"=="Cygwin" tar xzf cmake.tar.gz --strip-components=1 --directory "C:\cygwin64\home\appveyor\cmake"
   - if "%type%"=="Cygwin" '%command% "ls"'
   # MinGW
   - if "%type%"=="MinGW" if not exist "C:\mingw.7z" appveyor-retry appveyor DownloadFile "http://downloads.sourceforge.net/mingw-w64/x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z" -FileName "C:\mingw.7z"
