--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -50,6 +50,7 @@ install:
 #  - if "%type%"=="Cygwin" C:\cygwin64\setup-x86_64.exe --quiet-mode --no-shortcuts --upgrade-also --root "C:\cygwin64" --local-package-dir "C:\cache\cygwin" --packages cmake,automake,make,gcc-core,gcc-g++,doxygen,graphviz,libncurses-devel
   - if "%type%"=="Cygwin" appveyor-retry appveyor DownloadFile "https://cmake.org/files/v3.12/cmake-3.12.0.tar.gz" -FileName "C:\cygwin64\home\appveyor\cmake.tar.gz"
   - if "%type%"=="Cygwin" cd "C:\cygwin64\home\appveyor"
+  - if "%type%"=="Cygwin" mkdir "C:\cygwin64\home\appveyor\cmake"
   - if "%type%"=="Cygwin" tar xzf cmake.tar.gz --strip-components=1 --directory "C:\cygwin64\home\appveyor\cmake"
   - if "%type%"=="Cygwin" '%command% "ls"'
   # MinGW
