--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,8 @@ before_install:
   - if [ "$OS" == "osx" ]; then brew update; fi
   - if [ "$OS" == "osx" ]; then brew install doxygen; fi
   - if [ "$OS" == "osx" ]; then brew install graphviz; fi
+  # Doxygen support
+  - export doxygen=yes
 
 # Build scripts
 script: 
