--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -40,11 +40,11 @@ install:
   # Chocolatey
   - choco upgrade chocolatey
   # Doxygen
-  - choco install --cache "C:\ProgramData\chocolatey\cache" --force doxygen.install
-  - choco install --cache "C:\ProgramData\chocolatey\cache" --force ghostscript
-  - choco install --cache "C:\ProgramData\chocolatey\cache" --force graphviz
-  - choco install --cache "C:\ProgramData\chocolatey\cache" --force miktex
-  - set doxygen=yes
+  # - choco install --cache "C:\ProgramData\chocolatey\cache" --force doxygen.install
+  # - choco install --cache "C:\ProgramData\chocolatey\cache" --force ghostscript
+  # - choco install --cache "C:\ProgramData\chocolatey\cache" --force graphviz
+  # - choco install --cache "C:\ProgramData\chocolatey\cache" --force miktex
+  # - set doxygen=yes
   # Cygwin
   - if "%type%"=="Cygwin" if not exist "C:\cygwin64" mkdir "C:\cygwin64"
   - if "%type%"=="Cygwin" appveyor-retry appveyor DownloadFile "http://cygwin.com/setup-x86_64.exe" -FileName "C:\cygwin64\setup-x86_64.exe"
