--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
             - llvm-toolchain-trusty-7
           packages:
             - clang-7
-            - libstdc++-8-dev
+#            - libstdc++-8-dev
             - cmake
             - doxygen
             - graphviz
