--- a/.travis.yml
+++ b/.travis.yml
@@ -52,10 +52,15 @@ branches:
 before_install:
   # cmake
   - cmake --version
+  # doxygen support
+  - export doxygen=yes
   # git
   - git config --global user.name "Travis CI"
   - git config --global user.email "travis@travis-ci.org"
   - git config --global push.default simple
+  # gil
+  - git clone https://github.com/chronoxor/gil.git
+  - ./gil/gil.sh update
   # gcc
   - if [ "$OS" != "osx" ] && [ "$COMPILER" = "gcc" ]; then export CC="gcc-${GCC_VERSION}" CXX="g++-${GCC_VERSION}"; fi
   # clang, libc++, libc++abi
@@ -64,8 +69,6 @@ before_install:
   - if [ "$OS" == "osx" ]; then brew update; fi
   - if [ "$OS" == "osx" ]; then brew install doxygen; fi
   - if [ "$OS" == "osx" ]; then brew install graphviz; fi
-  # Doxygen support
-  - export doxygen=yes
 
 # Build scripts
 script: 
