--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ matrix:
             - gcc-8
             - g++-8
             - cmake
-            - python3
             - doxygen
             - graphviz
             - binutils-dev
@@ -32,7 +31,6 @@ matrix:
             - clang-7
             - libstdc++-8-dev
             - cmake
-            - python3
             - doxygen
             - graphviz
             - binutils-dev
@@ -43,7 +41,7 @@ matrix:
 
 # Using Trusty environment
 sudo: required
-dist: trusty
+dist: xenial
 
 # Branches to build
 branches:
