--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -54,9 +54,9 @@ install:
 #  - if "%type%"=="VisualStudio" set PATH=C:\Program Files\MiKTeX 2.9\miktex\bin\x64;C:\Program Files\gs\gs9.22\bin;%PATH%
 #  - if "%type%"=="VisualStudio" set INCLUDE=C:\Program Files (x86)\Windows Kits\10\Include\10.0.17134.0\um;C:\Program Files (x86)\Windows Kits\10\Include\10.0.17134.0\shared;%INCLUDE%
 # - if "%type%"=="VisualStudio" set LIB=C:\Program Files (x86)\Windows Kits\10\Lib\10.0.17134.0\um\x64;%LIB%
-  # cmake
+  # CMake
   - cmake --version
-  # doxygen support
+  # Doxygen support
   #- set doxygen=yes
   # git
   - '%command% "cmake --version"'
@@ -64,6 +64,7 @@ install:
   - '%command% "git config --global user.email "team@appveyor.com""'
   - '%command% "git config --global push.default simple"'
   # gil
+  - set PATH=C:\Python37;%PATH%
   - '%command% "git clone https://github.com/chronoxor/gil.git"'
   - '%command% ".\gil\gil.bat update"'
 
